<resources>
    <string name="app_name">AirTickets</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AirTickets</string>
    <string name="nav_header_subtitle">air.tickets@qualo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">ВОЙТИ</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">У вас ещё нет аккаунта? Создать</string>
    <string name="login_error">Неправильный email или пароль</string>
    <string name="username">Username</string>
    <string name="name">Имя</string>ф
    <string name="second_name">Фамилия</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="sign_in_button">Зарегистрироваться</string>
    <string name="exit">Выйти</string>
    <string name="online_error">Отсутствует подключение к интернету</string>
    <string name="server_unavailable">Не удалось подключиться к серверу</string>
    <string name="bookButton">Заказать</string>
    <string name="best_price">Стоимость</string>
    <string name="in_travel">В пути</string>
    <string name="destination">Прилет</string>
    <string name="departure">Вылет</string>
    <string name="company">Перевозчик</string>
    <string name="basket">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="sort">Сортировка</string>
    <string name="bookings">Заказы</string>
    <string name="cancelBook">Отменить</string>
    <string name="sex">Пол</string>
    <string name="classTicket">Класс</string>
    <string name="numberTicket">Номер места</string>
    <string name="moreButton">Подробнее</string>
    <string name="editProfileButton">РЕДАКТИРОВАТЬ</string>
    <string name="postButton">ОТПРАВИТЬ</string>
    <string name="payOrder">ОПЛАТИТЬ</string>
    <string name="allFlights">ВСЕ БИЛЕТЫ</string>
    <string name="createFlight">СОЗДАТЬ РЕЙС</string>
    <string name="createTicket">СОЗДАТЬ БИЛЕТ</string>
    <string name="title_activity_create_ticket">CreateTicketActivity</string>
</resources>
