<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ticketInBookingCardview"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/departureCardview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/departure"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/departure_infoCardview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/destinationCardview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/destination"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/destination_infoCardview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/company"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/company_infoCardview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/in_travel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/in_travel"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/in_travel_infoCardview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/best_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/best_price"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/best_price_infoCardview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/border_color" />

            <Button
                android:id="@+id/cancelBookCardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/cancelBook"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>