<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ticketInFlightCardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"

        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/departure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/departure"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/departure_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/destination"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/destination"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/destination_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/company"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/company_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/in_travel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/in_travel"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/in_travel_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/border_color" />

            <Button
                android:id="@+id/bookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moreButton"
                android:textAlignment="center" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>