<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    tools:context=".activity.user.RegistrationActivity">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/name"

        android:inputType="text"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/secondNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:inputType="text"
        android:hint="@string/second_name"

        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/newEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:inputType="textEmailAddress"
        android:hint="Login"

        app:layout_constraintTop_toBottomOf="@id/secondNameEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:inputType="textPassword"
        android:hint="@string/password"

        app:layout_constraintTop_toBottomOf="@id/newEmailEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/setDateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPasswordEditText">

        <TextView
            android:id="@+id/setDateOfBirthTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Дата рождения:"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            />

        <Button
            android:layout_weight="1"
            android:id="@+id/setDateOfBirthButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorSignInButton"
            android:onClick="setDateOfBirth"
            android:text="Задать дату рождения"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setDateOfDestButton" />
    </LinearLayout>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sexRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/setDateOfBirth"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Пол:"/>

        <RadioButton android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Муж"
            android:checked="true"/>
        <RadioButton android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Жен" />
    </RadioGroup>


    <!--<EditText
        android:id="@+id/sexEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:inputType="text"
        android:hint="@string/sex"

        app:layout_constraintTop_toBottomOf="@id/setDateOfBirth"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"/>-->

    <Button
        android:id="@+id/SigInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorSignInButton"
        android:onClick="registrationNewUser"
        android:text="@string/sign_in_button"

        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sexRadioButton" />





</android.support.constraint.ConstraintLayout>